--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,9 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 config.py
+
+# Other types of files containing data
+*.csv
+*.iml
+*.xml
+*.pkl
